--- a/Core/src/Umbrella.Utilities.Integration.NewtonsoftJson/Umbrella.Utilities.Integration.NewtonsoftJson.csproj
+++ b/Core/src/Umbrella.Utilities.Integration.NewtonsoftJson/Umbrella.Utilities.Integration.NewtonsoftJson.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;AzureDevOps</Configurations>
     <DocumentationFile>bin\Release\netstandard2.0\Umbrella.Utilities.Integration.NewtonsoftJson.xml</DocumentationFile>
@@ -12,6 +12,7 @@
 
   <PropertyGroup Condition="'$(Configuration)'=='AzureDevOps'">
     <Optimize>true</Optimize>
+    <DefineConstants>AzureDevOps</DefineConstants>
   </PropertyGroup>
   
   <PropertyGroup>
