--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant.Abstractions/Umbrella.DataAccess.MultiTenant.Abstractions.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant.Abstractions/Umbrella.DataAccess.MultiTenant.Abstractions.csproj
@@ -12,11 +12,12 @@
 
 	<PropertyGroup Condition="'$(Configuration)'=='AzureDevOps'">
 		<Optimize>true</Optimize>
+		<DefineConstants>AzureDevOps</DefineConstants>
 	</PropertyGroup>
 
 	<PropertyGroup>
 		<PackageId>Umbrella.DataAccess.MultiTenant.Abstractions</PackageId>
-		<Version>2.9.4</Version>
+		<Version>2.9.5</Version>
 		<Authors>Richard Edwards</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
@@ -33,6 +34,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
 	</ItemGroup>
 
 </Project>
