--- a/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
@@ -4,6 +4,7 @@
 		<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
+		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.FileSystem.Disk.xml</DocumentationFile>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
