--- a/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
+++ b/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net461</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
+		<DocumentationFile>bin\Release\net461\Umbrella.Legacy.Utilities.xml</DocumentationFile>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
