--- a/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net461</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;AzureDevOps</Configurations>
+		<DocumentationFile>bin\Release\net461\Umbrella.Legacy.WebUtilities.Bundling.xml</DocumentationFile>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
